# test_task_1

./: .env  .env.dev  .env.dev-example  .env.example  .gitignore  .test.env  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
docker/: celery.sh  consumer.sh
migrations/: env.py
migrations/versions/: 2024_04_03_1148-1a9b533c0033_описание_изменений.py  2024_07_04_1228-369581f396f4_create_tables.py  2024_07_09_1140-473140cf27fb_create_table.py
src/: __init__.py  celery_app.py  config.py  consumer.py  database.py  main.py
src/celery/: celery_app.py
src/celery/task/: task_celery.py
src/database/: database.py  models.py  repository.py  transaction.py
src/models/order/: dependencies.py  repository.py  schemas.py
src/models/order_types/: dependencies.py  repository.py  schemas.py
src/models/user_session/: dependencies.py  repository.py  schemas.py
src/models/user_session/task/: tasks_cookie.py
src/order/: dependencies.py  models.py  routers.py  schemas.py  task_celery.py  tasks.py
src/pika/: router.py
src/pika/config/: rabbit_connection.py
src/pika/task/: create_order.py
src/repository/: order_type.py
src/routers/: order.py  order_create_RMQ.py  order_type.py
src/services/: order.py  order_types.py  user_session.py
src/tasks/: task_celery.py  tasks_cookie.py
src/utils/: extra_logger.py  repository.py  transaction.py
src/worker/: task_celery.py
tests/: conftest.py  data_for_tests.py  test_api.py  test_auth.py  test_db.py  test_operations.py  test_repo.py  test_utils.py  test_z_api.py
